infra/gateway.yml
apiVersion: gateway.networking.k8s.io/v1
kind: Gateway
metadata:
  name: cloudwear-gateway
spec:
  gatewayClassName: kong
  listeners:
    - name: http
      protocol: http
      port: 80
